--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-nav></app-nav>
+<body style="background: linear-gradient(to right, rgb(11, 155, 11), white); height:787px;">
 <router-outlet></router-outlet>
+</body>
